src/objects/Jurisdicton_Role__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>Person playing a role in this Jurisdiction</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jurisdiction Roles</relationshipLabel>
        <relationshipName>R00N700000026ExnEAE</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Jurisdiction_Role__c</fullName>
        <label>Jurisdiction Role</label>
        <picklist>
            <picklistValues>
                <fullName>Grasstop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <inlineHelpText>Jurisdiction for this person&apos;s role</inlineHelpText>
        <label>Jurisdiction</label>
        <referenceTo>Jurisdiction__c</referenceTo>
        <relationshipLabel>Jurisdiction Roles</relationshipLabel>
        <relationshipName>R00N700000026ExxEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Jurisdicton Role</label>
    <nameField>
        <displayFormat>Role - {00000}</displayFormat>
        <label>Jurisdicton Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jurisdiction Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>